tests/negative/test_raw_dot_bad_index.orb
fnc main () () {
    . \(a b) 99;
};